# hermes-client

./: .gitignore  .readthedocs.yaml  README.md  example.ipynb  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: _tests.yml  publish.yml
docs/: Makefile
docs/source/: conf.py  index.md
docs/source/_templates/autosummary/: base.rst  class.rst  class_notoctree.rst  module.rst
docs/source/reference/: forecast_client.md  forecastseries_client.md  hermes_client.md  index.md
hermes_client/: __init__.py  base.py  clients.py  forecast.py  forecastseries.py  hermes.py  modelrun.py  schemas.py  utils.py
hermes_client/tests/: conftest.py  test_forecastseries.py  test_hermes.py
hermes_client/tests/data/: forecasts.json  forecastseries.json  injectiontemplates.json  modelconfigs.json  project.json
ramsis_client/: clients.py  utils.py
