[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["hermes_client"]

[project]
name = "hermes-client"
dynamic = ["version"]
description = "Python client library for the HERMES web service"
readme = "README.md"
authors = [{ name = "Nicolas Schmid", email = "nicolas.schmid@sed.ethz.ch" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "pandas",
    "pydantic",
    "requests",
    "rich",
    "seismostats",
    "shapely",
    "hydws-client",
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "docutils==0.19",
    "flake8",
    "isort",
    "myst-parser",
    "pandoc",
    "pydata-sphinx-theme",
    "pytest-cov",
    "pytest",
    "responses",
    "setuptools-scm",
    "sphinx-autobuild",
    "sphinx",
    "tox",
    "twine",
]


[project.urls]
Documentation = "https://hermes-client.readthedocs.io/"
Repository = "https://github.com/swiss-seismological-service/hermes-client"
Issues = "https://github.com/swiss-seismological-service/hermes-client/issues"


[tool.setuptools_scm]


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
filterwarnings = ["ignore::DeprecationWarning"]
