[metadata]
name = hermes-client
author = Schmid Nicolas
author_email = nicolas.schmid@sed.ethz.ch
version = 0.0.1
description = Client Library for HERMES
long_description = file: README.md, LICENSE
license = AGPL License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    pandas
    requests
    seismostats @ git+https://github.com/swiss-seismological-service/SeismoStats.git
    hydws-client @ git+https://git@gitlab.seismo.ethz.ch/indu/hydws-client.git

python_requires = >= 3.10

[options.packages.find]
include=hermes_client*

[flake8]
select = E,F,W
max_line_length = 79
ignore = E402, W503
exclude =
  .git,
  .tox,
  .eggs,
  .config,
  *.egg-info,
  __pycache__,
  .pytest_cache,
  env,
